--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
@@ -154,16 +154,16 @@
                         CaseFieldCaption(GlobalEnums.TranslationCaseFields.tblLog_Filename, "Bifogad fil").ToString(),
                         Model.GetFieldStyle(GlobalEnums.TranslationCaseFields.tblLog_Filename, CaseSolutionFields.LogFileName),
                         Model.CaseLog.Id == 0 && !Model.newLog,
-                        @* TODO: check why internal log note check was used! *@
-                        Model.EnableTwoAttachments
-                                ? Model.IsReadOnly(GlobalEnums.TranslationCaseFields.tblLog_Text_External, CaseSolutionFields.ExternalLogNote)
-                                : Model.IsReadOnly(GlobalEnums.TranslationCaseFields.tblLog_Text_Internal, CaseSolutionFields.InternalLogNote),
-                        Model.EnableTwoAttachments))
+                                @* TODO: check why internal log note check was used! *@
+Model.EnableTwoAttachments
+? Model.IsReadOnly(GlobalEnums.TranslationCaseFields.tblLog_Text_External, CaseSolutionFields.ExternalLogNote)
+: Model.IsReadOnly(GlobalEnums.TranslationCaseFields.tblLog_Text_Internal, CaseSolutionFields.InternalLogNote),
+Model.EnableTwoAttachments))
 
                 @if (Model.CaseInternalLogAccess)
                 {
                     <tr style="@Model.GetFieldStyle(GlobalEnums.TranslationCaseFields.tblLog_Text_Internal, CaseSolutionFields.InternalLogNote)">
-                        <td>@CaseFieldCaption(GlobalEnums.TranslationCaseFields.tblLog_Text_Internal, "Intern notering")</td>
+                        <td>@CaseFieldCaption(GlobalEnums.TranslationCaseFields.tblLog_Text_Internal, "Intern notering")<span id="internalNoteRequired" class="mandatorystar" style="display:none"> * </span></td>
                         <td>
                             @if (!Model.IsReadOnly(GlobalEnums.TranslationCaseFields.tblLog_Text_Internal, CaseSolutionFields.InternalLogNote) && !readonlyMode)
                             {
@@ -179,6 +179,25 @@
                             <div class="checkbox">
                                 <div>
                                     @Html.HiddenFor(model => model.CaseLog.EmailRecepientsInternalLogTo, new { id = "caseLog_EmailRecepientsInternalLogTo", @readonly = "true" })
+
+                                    <div class="checkbox commun">
+
+                                        @Html.CheckBoxFor(model => model.CaseLog.SendMailAboutCaseToPerformer,
+                                            new { InformPerformerBehavior = Model.InformPerformerBehavior.ToJavaScriptBool() })
+
+                                        <span class="inline-block-span lbl">
+                                            @Translation.GetCoreTextTranslation("Informera handläggare")
+                                            <span id="txtInformPerformer" style="display: none">
+                                                @Html.Raw("(")<span id="selected-performer-email">@{
+                                                        var selectedPerformer = Model.PerformersToSearch.FirstOrDefault(p => p.UserId == Model.Performer_Id);
+                                                        if (selectedPerformer != null)
+                                                        {
+                                                            @Model.PerformersToSearch.Where(p => p.UserId == Model.Performer_Id).FirstOrDefault().Email
+                                                        }
+                                                    }</span>@Html.Raw(")")
+                                                </span>
+                                            </span>
+                                    </div>
 
                                     @if (!Model.IsReadOnly(GlobalEnums.TranslationCaseFields.tblLog_Text_Internal, CaseSolutionFields.InternalLogNote) && !readonlyMode)
                                     {
@@ -204,14 +223,15 @@
                                         <div id="fake_CaseLog_EmailRecepientsInternalLogCc" contenteditable="false" style="z-index: 1; background-color:#eeeeee;" class="case-send-emails-div case-usersearch-textarea @Model.getSearchEmailClass(CaseSectionType.Communication)"></div>
                                     }
                                 </div>
-
+                            </div>
+                            <div class="checkbox commun">
                                 @if (Model.templateistrue != 1 && !readonlyMode)
                                 {
                                     if (!Model.IsReadOnly(GlobalEnums.TranslationCaseFields.tblLog_Text_Internal, CaseSolutionFields.InternalLogNote))
                                     {
                                         if (Model.IsItParentCase() || Model.IsItChildCase())
                                         {
-                                            <br />@Html.CheckBox("CaseLog.SendLogToParentChildLog")
+                                            @Html.CheckBox("CaseLog.SendLogToParentChildLog")
                                             if (Model.IsItParentCase())
                                             {
                                                 <span class="lbl">@Translation.Get("Skicka intern loggpost till underärenden", SessionFacade.CurrentCaseLanguageId)</span>
@@ -244,11 +264,11 @@
                             false,// internal
                             CaseFieldCaption(GlobalEnums.TranslationCaseFields.tblLog_Filename_Internal, "Intern bifogad fil").ToHtmlString(),
                             Model.GetFieldStyle(GlobalEnums.TranslationCaseFields.tblLog_Filename_Internal, CaseSolutionFields.LogFileName_Internal),
-                            Model.CaseLog.Id == 0 && !Model.newLog, 
+                            Model.CaseLog.Id == 0 && !Model.newLog,
                             Model.IsReadOnly(GlobalEnums.TranslationCaseFields.tblLog_Text_Internal, CaseSolutionFields.InternalLogNote),
                             Model.EnableTwoAttachments))
                 }
-               
+
                 @if (Model.newLog || Model.editLog)
                 {
                     <tr class="displaytr" style="@Model.GetFieldStyle(GlobalEnums.TranslationCaseFields.StateSecondary_Id, CaseSolutionFields.StateSecondary)">
@@ -384,7 +404,7 @@
             <div class="secnavs secnavmarg">
                 <div class="pull-left">
                     <ul class="secnav">
-                         <li><input type="button" id="btnCaseCharge" class="btn" style="@Model.ShowInvoiceFields.displayHtml()" value="@Translation.GetCoreTextTranslation("Debitering")" /></li>
+                        <li><input type="button" id="btnCaseCharge" class="btn" style="@Model.ShowInvoiceFields.displayHtml()" value="@Translation.GetCoreTextTranslation("Debitering")" /></li>
                     </ul>
                 </div>
             </div>
@@ -398,11 +418,11 @@
             <div class="span6">
                 <table class="tableform">
                     <thead>
-                    <tr>
-                        <th class="span3"></th>
-                        <th class="span4"></th>
-                        <th class="span5"></th>
-                    </tr>
+                        <tr>
+                            <th class="span3"></th>
+                            <th class="span4"></th>
+                            <th class="span5"></th>
+                        </tr>
                     </thead>
 
                     <tr id="invoiceField-Time">
@@ -615,6 +635,7 @@
                     $("#" + "@Html.IdFor(x => x.CaseLog.Charge)").attr("checked", "checked");
             });
 
+
     var maxLength = 3000;
     function checkLength(el) {
         if (el.value.length > maxLength) {
@@ -635,6 +656,19 @@
         e.preventDefault();
         $(this).parents(".section-block").removeClass("hideshow");
     });
+
+    $("#Performer_Id").on("change", function (e) {
+        e.preventDefault();
+        let performerId = $("#Performer_Id").val();
+            $.ajax({
+                url: "/users/GetEmailById",
+                type: "GET",
+                data: { id: performerId, }
+                })
+                .done(function (result) {
+                    $("#selected-performer-email").html(result);
+                });
+            });
 
 </script>
 
