213546 - Task - Case - Show email recipients when writing external log n…

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
@@ -670,9 +670,15 @@ Model.EnableTwoAttachments))
     function valueChanged() {
         
         if ($('#SendMailAboutCaseToNotifier').is(":checked")) {
-            var followers = 'cc: ' + $("#extraEmailsInput").val().replaceAll(";", "\n\r");
-            $('#extraEmailsInputShow').text(followers);
             $("#emailsTo").show();
+            var extras = $("#extraEmailsInput").val();
+            if (extras != "") {
+                //.replaceAll(";", "\n\r")
+                var followers = 'cc: ' + $("#extraEmailsInput").val();
+                $('#extraEmailsInputShow').text(followers);
+                
+            }
+            
         }
 
         else {
