--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/FeedbackAnswer/ThankYou.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/FeedbackAnswer/ThankYou.cshtml
@@ -5,39 +5,40 @@
 
 <div class="content">
     <div class="container">
-        <div id="feedbackThanksText" style="display: none">
+        <div id="feedbackThanksText" style="display: @(Model.IsShowNote ? "none" : "block")">
             @Html.Raw(Model.Html)
         </div>
-        @using (Html.BeginForm("SaveComment", "FeedbackAnswer", new { customerId = Model.CustomerId, languageId = Model.LanguageId, questionId = Model.QuestionId, noteText = Model.NoteText }, FormMethod.Post))
+        @if (Model.IsShowNote)
         {
-            <div id="feedbackContent">
-                @if (Model.IsShowNote)
-                {
-                    @Html.DisplayFor(m => m.NoteLabel)
-                }
-                <br />
-                @Html.TextAreaFor(m => m.NoteText, new { id = "feedbackComment" })
-                @Html.ValidationMessageFor(m => m.NoteText)
-                @Html.HiddenFor(m => m.CustomerId)
-                @Html.HiddenFor(m => m.LanguageId)
-                @Html.HiddenFor(m => m.QuestionId)
-                <br />
-                @if (Model.LanguageId == 1)
-                {
-                    <a href="#" id="btnSaveComment" class="btn templateQuickButton"> Spara </a>
-                }
-                else if (Model.LanguageId == 2)
-                {
-                    <a href="#" id="btnSaveComment" class="btn templateQuickButton"> Save </a>
-                }
-                else
-                {
-                    <a href="#" id="btnSaveComment" class="btn templateQuickButton">@Translation.GetCoreTextTranslation("Spara")</a>
-                }
+            using (Html.BeginForm("SaveComment", "FeedbackAnswer", new { customerId = Model.CustomerId, languageId = Model.LanguageId, questionId = Model.QuestionId, noteText = Model.NoteText }, FormMethod.Post))
+            {
+                <div id="feedbackContent">
 
-            </div>
+                    @Html.DisplayFor(m => m.NoteLabel)
+
+                    <br />
+                    @Html.TextAreaFor(m => m.NoteText, new { id = "feedbackComment" })
+                    @Html.ValidationMessageFor(m => m.NoteText)
+                    @Html.HiddenFor(m => m.CustomerId)
+                    @Html.HiddenFor(m => m.LanguageId)
+                    @Html.HiddenFor(m => m.QuestionId)
+                    <br />
+                    @if (Model.LanguageId == 1)
+                    {
+                        <a href="#" id="btnSaveComment" class="btn templateQuickButton"> Spara </a>
+                    }
+                    else if (Model.LanguageId == 2)
+                    {
+                        <a href="#" id="btnSaveComment" class="btn templateQuickButton"> Save </a>
+                    }
+                    else
+                    {
+                        <a href="#" id="btnSaveComment" class="btn templateQuickButton">@Translation.GetCoreTextTranslation("Spara")</a>
+                    }
+                </div>
+            }
         }
-    </div>
+        </div>
 </div>
 
 <script type="text/javascript">
