--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
@@ -136,10 +136,11 @@
                                     new { InformNotifierBehavior = Model.InformNotifierBehavior.ToJavaScriptBool(), id = "SendMailAboutCaseToNotifier", onclick= "valueChanged()" })
                             }
                             <span class="lbl">@Translation.GetCoreTextTranslation("Informera anmälare och följare om åtgärder") </span><br />
-                            <span id="emailsTo" style="display:none;">
-                                @Translation.GetCoreTextTranslation("Till"): @Html.DisplayFor(model => model.case_.PersonsEmail)<br />
-                                <span id="extraEmailsInputShow"></span>
-                                                    </span>
+                            <span id="emailsTo"style="display: none;">
+                                @Translation.ToTitleCase(@Translation.GetCoreTextTranslation("Till")): @Html.DisplayFor(model => model.case_.PersonsEmail)<br />
+
+                                <span id="ccTitle">@Translation.GetCoreTextTranslation("Kopia"): </span><span id="extraEmailsInputShow" style="white-space: break-spaces;"></span>
+                            </span>
                         </div>
                         @Html.HiddenFor(model => model.CaseLog.RegUser)
                         @Html.HiddenFor(model => model.CaseLog.LogType)
@@ -671,21 +672,25 @@ Model.EnableTwoAttachments))
         
         if ($('#SendMailAboutCaseToNotifier').is(":checked")) {
             $("#emailsTo").show();
-            var extras = $("#extraEmailsInput").val();
-            if (extras != "") {
-                //.replaceAll(";", "\n\r")
-                var followers = 'cc: ' + $("#extraEmailsInput").val();
-                $('#extraEmailsInputShow').text(followers);
-                
-            }
+            var existingText = $('#extraEmailsInputShow').text();
+            //.replaceAll(";", "\r\n")
+            var extras = $("#extraEmailsInput").val().replaceAll(";", " ");
             
+            if (extras != "") {
+                console.log(existingText);
+                $('#extraEmailsInputShow').text(extras);
+                $('#extraEmailsInputShow').show();
+                $("#ccTitle").show();
+            }
+
         }
 
         else {
-            console.log('unchecked');
             $("#emailsTo").hide();
+            $("#ccTitle").hide();
+            $('#extraEmailsInputShow').hide();
         }
-           
+
     }
 
     $("#Performer_Id").on("change", function (e) {
