--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
@@ -41,6 +41,17 @@
     <case-textarea-control [field]="caseFieldsNames.Log_InternalText" [form]="form"></case-textarea-control>
   </div>
 
+  <div class="bordered switch">
+    <mbsc-switch #sendMailToPerformerControl 
+                 [disabled]="isSendMailToNotifierDisabled"
+                 [formControlName]="caseFieldsNames.Log_SendMailToPerformer"
+                 (change)="onSendInternalEmailsCheckChanged()"
+                 [options]="switchOptions">
+      <span [ngClass]="{'mbsc-log-label': true, 'disabled': isSendMailToPerformerDisabled }">{{ 'Informera handläggare' | translate }}</span>
+      <span class="mbsc-desc" [innerHtml]="performerUserEmail | sanitize:'html'" [style.display]="isSendMailToPerformerDisabled  ? 'none' : 'block'"></span>
+    </mbsc-switch>
+  </div>
+
   <div class="bordered">
     <lognote-email-input [field]="caseFieldsNames.Log_InternalEmailsTo" [form]="form"></lognote-email-input>
   </div>
