--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
@@ -133,10 +133,10 @@
                             else
                             {
                                 @Html.CheckBoxFor(model => model.CaseLog.SendMailAboutCaseToNotifier,
-                                    new { InformNotifierBehavior = Model.InformNotifierBehavior.ToJavaScriptBool(), id = "SendMailAboutCaseToNotifier", onclick= "valueChanged()" })
+                                    new { InformNotifierBehavior = Model.InformNotifierBehavior.ToJavaScriptBool(), id = "SendMailAboutCaseToNotifier", onclick = "valueChanged()" })
                             }
                             <span class="lbl">@Translation.GetCoreTextTranslation("Informera anmälare och följare om åtgärder") </span><br />
-                            <span id="emailsTo"style="display: none;">
+                            <span id="emailsTo" style="display: none;">
                                 @Translation.ToTitleCase(@Translation.GetCoreTextTranslation("Till")): @Html.DisplayFor(model => model.case_.PersonsEmail)<br />
 
                                 <span id="ccTitle">@Translation.GetCoreTextTranslation("Kopia"): </span><span id="extraEmailsInputShow" style="white-space: break-spaces;"></span>
@@ -159,7 +159,7 @@
                         CaseFieldCaption(GlobalEnums.TranslationCaseFields.tblLog_Filename, "Bifogad fil").ToString(),
                         Model.GetFieldStyle(GlobalEnums.TranslationCaseFields.tblLog_Filename, CaseSolutionFields.LogFileName),
                         Model.CaseLog.Id == 0 && !Model.newLog,
-                                @* TODO: check why internal log note check was used! *@
+    @* TODO: check why internal log note check was used! *@
 Model.EnableTwoAttachments
 ? Model.IsReadOnly(GlobalEnums.TranslationCaseFields.tblLog_Text_External, CaseSolutionFields.ExternalLogNote)
 : Model.IsReadOnly(GlobalEnums.TranslationCaseFields.tblLog_Text_Internal, CaseSolutionFields.InternalLogNote),
@@ -192,16 +192,22 @@ Model.EnableTwoAttachments))
 
                                         <span class="inline-block-span lbl">
                                             @Translation.GetCoreTextTranslation("Informera handläggare")
-                                            <span id="txtInformPerformer" style="display: none">
-                                                @Html.Raw("(")<span id="selected-performer-email">@{
-                                                        var selectedPerformer = Model.PerformersToSearch.FirstOrDefault(p => p.UserId == Model.Performer_Id);
-                                                        if (selectedPerformer != null)
-                                                        {
-                                                            @Model.PerformersToSearch.Where(p => p.UserId == Model.Performer_Id).FirstOrDefault().Email
+                                            @if (Model.PerformersToSearch != null)
+                                            {
+                                                <span id="txtInformPerformer" style="display: none">
+                                                    @Html.Raw("(")<span id="selected-performer-email">
+                                                        @{
+                                                            var selectedPerformer = Model.PerformersToSearch.FirstOrDefault(p => p.UserId == Model.Performer_Id);
+                                                            if (selectedPerformer != null)
+                                                            {
+                                                                @Model.PerformersToSearch.Where(p => p.UserId == Model.Performer_Id).FirstOrDefault().Email
+                                                            }
                                                         }
-                                                    }</span>@Html.Raw(")")
+                                                    </span>@Html.Raw(")")
+
                                                 </span>
-                                            </span>
+                                            }
+                                        </span>
                                     </div>
 
                                     @if (!Model.IsReadOnly(GlobalEnums.TranslationCaseFields.tblLog_Text_Internal, CaseSolutionFields.InternalLogNote) && !readonlyMode)
@@ -662,13 +668,13 @@ Model.EnableTwoAttachments))
         $(this).parents(".section-block").removeClass("hideshow");
     });
     function valueChanged() {
-        
+
         if ($('#SendMailAboutCaseToNotifier').is(":checked")) {
             $("#emailsTo").show();
             var existingText = $('#extraEmailsInputShow').text();
             //.replaceAll(";", "\r\n")
             var extras = $("#extraEmailsInput").val().replaceAll(";", " ");
-            
+
             if (extras != "") {
                 console.log(existingText);
                 $('#extraEmailsInputShow').text(extras);
