--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
@@ -9,8 +9,6 @@
 @using DH.Helpdesk.Common.Extensions.Boolean
 @using DH.Helpdesk.Web.Common.Enums.Case
 @using DH.Helpdesk.Web.Infrastructure.Extensions.HtmlHelperExtensions
-@using System.Web.Mvc
-
 
 @Scripts.Render("~/bundles/Cases/_CaseLogInput")
 @{
@@ -138,7 +136,7 @@
                                     new { InformNotifierBehavior = Model.InformNotifierBehavior.ToJavaScriptBool(), id = "SendMailAboutCaseToNotifier", onclick = "valueChanged()" })
                             }
                             <span class="lbl">@Translation.GetCoreTextTranslation("Informera anmälare och följare om åtgärder") </span><br />
-                            <span id="emailsTo"style="display: none;">
+                            <span id="emailsTo" style="display: none;">
                                 @Translation.ToTitleCase(@Translation.GetCoreTextTranslation("Till")): @Html.DisplayFor(model => model.case_.PersonsEmail)<br />
 
                                 <span id="ccTitle">@Translation.GetCoreTextTranslation("Kopia"): </span><span id="extraEmailsInputShow" style="white-space: break-spaces;"></span>
@@ -161,7 +159,7 @@
                         CaseFieldCaption(GlobalEnums.TranslationCaseFields.tblLog_Filename, "Bifogad fil").ToString(),
                         Model.GetFieldStyle(GlobalEnums.TranslationCaseFields.tblLog_Filename, CaseSolutionFields.LogFileName),
                         Model.CaseLog.Id == 0 && !Model.newLog,
-                                @* TODO: check why internal log note check was used! *@
+    @* TODO: check why internal log note check was used! *@
 Model.EnableTwoAttachments
 ? Model.IsReadOnly(GlobalEnums.TranslationCaseFields.tblLog_Text_External, CaseSolutionFields.ExternalLogNote)
 : Model.IsReadOnly(GlobalEnums.TranslationCaseFields.tblLog_Text_Internal, CaseSolutionFields.InternalLogNote),
@@ -193,14 +191,12 @@ Model.EnableTwoAttachments))
                                             new { InformPerformerBehavior = Model.InformPerformerBehavior.ToJavaScriptBool() })
 
                                         <span class="inline-block-span lbl">
-                                            @Translation.GetCoreTextTranslation("Informera") @CaseFieldCaption(GlobalEnums.TranslationCaseFields.Performer_User_Id, "Handläggare")
-
+                                            @Translation.GetCoreTextTranslation("Informera handläggare")
                                             @if (Model.PerformersToSearch != null)
                                             {
                                                 <span id="txtInformPerformer" style="display: none">
                                                     @Html.Raw("(")<span id="selected-performer-email">
                                                         @{
-
                                                             var selectedPerformer = Model.PerformersToSearch.FirstOrDefault(p => p.UserId == Model.Performer_Id);
                                                             if (selectedPerformer != null)
                                                             {
@@ -208,9 +204,10 @@ Model.EnableTwoAttachments))
                                                             }
                                                         }
                                                     </span>@Html.Raw(")")
+
                                                 </span>
-                                             }
-                                            </span>
+                                            }
+                                        </span>
                                     </div>
 
                                     @if (!Model.IsReadOnly(GlobalEnums.TranslationCaseFields.tblLog_Text_Internal, CaseSolutionFields.InternalLogNote) && !readonlyMode)
@@ -677,7 +674,7 @@ Model.EnableTwoAttachments))
             var existingText = $('#extraEmailsInputShow').text();
             //.replaceAll(";", "\r\n")
             var extras = $("#extraEmailsInput").val().replaceAll(";", " ");
-            
+
             if (extras != "") {
                 console.log(existingText);
                 $('#extraEmailsInputShow').text(extras);
@@ -697,26 +694,16 @@ Model.EnableTwoAttachments))
 
     $("#Performer_Id").on("change", function (e) {
         e.preventDefault();
-        
         let performerId = $("#Performer_Id").val();
-
-        $("#selected-performer-email").html('');
-
-        if (performerId !== null) {
-            if (!isNaN(performerId)) {
-                if (parseInt(performerId) > 0) {
-                    $.ajax({
-                        url: "/users/GetEmailById",
-                        type: "GET",
-                        data: { id: performerId, }
-                    })
-                    .done(function (result) {
-                        $("#selected-performer-email").html(result);
-                    });
-                }
-            }
-        }
-    });
+            $.ajax({
+                url: "/users/GetEmailById",
+                type: "GET",
+                data: { id: performerId, }
+                })
+                .done(function (result) {
+                    $("#selected-performer-email").html(result);
+                });
+            });
 
 </script>
 
