#209939 - Task - Edit case - Mobile: Internal lognote to administrator

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.scss
@@ -35,7 +35,7 @@
         padding-left: .5em;
       }
       .mbsc-desc {
-        color:#000;
+        // color:#000;
         opacity:1;
         font-size:12px!important;
         overflow: hidden; 
