--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
@@ -43,11 +43,12 @@
 
   <div class="bordered switch">
     <mbsc-switch #sendMailToPerformerControl 
+                [disabled]="isPerformerNullOrCurrentUser"
                  [formControlName]="caseFieldsNames.Log_SendMailToPerformer"
                  (change)="onSendInternalEmailsCheckChanged()"
                  [options]="switchOptions">
-      <span [ngClass]="{'mbsc-log-label': true, 'disabled': isSendMailToPerformerDisabled }">{{ 'Informera' | translate }} {{ performerLabel }}</span>
-      <span class="mbsc-desc" [innerHtml]="performerUserEmail | sanitize:'html'" [style.display]="isSendMailToPerformerDisabled  ? 'none' : 'block'"></span>
+      <span [ngClass]="{'mbsc-log-label': true, 'disabled': isSendMailToPerformerDisabled || this.sendInternalEmailsFormControl.disabled || isPerformerNullOrCurrentUser}">{{ 'Informera' | translate }} {{ performerLabel }}</span>
+      <span [ngClass]="{'mbsc-desc': true, 'disabled': isSendMailToPerformerDisabled}" [innerHtml]="performerUserEmail | sanitize:'html'" [style.display]="isPerformerNullOrCurrentUser ? 'none' : 'block'"></span>
     </mbsc-switch>
   </div>
 
